--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
               "src/styles.scss"
             ],
             "scripts": [
+              "src/assets/plugins/jarallax/jarallax.min.js",
               "node_modules/chart.js/dist/Chart.js",
               "node_modules/hammerjs/hammer.min.js"
             ],
